--- a/package.json
+++ b/package.json
@@ -6,12 +6,35 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.2",
+    "bcrypt-nodejs": "latest",
+    "bcryptjs": "^2.4.3",
+    "bluebird": "^3.5.3",
+    "body-parser": "^1.18.3",
+    "bootstrap-social": "^5.1.1",
+    "connect-flash": "~0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "md5": "^2.2.1",
+    "method-override": "~2.3.6",
+    "mongoose": "^4.13.17",
+    "mongoose-unique-validator": "^2.0.2",
     "morgan": "~1.9.0",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.6",
+    "passport": "^0.3.2",
+    "passport-facebook": "~2.1.1",
+    "passport-google-oauth": "~1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "~1.0.4",
+    "shortid": "^2.2.14"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.5.0",
+    "tether": "^1.4.5"
   }
 }
