--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "bootstrap-social": "^5.1.1",
+    "chalk": "^2.4.1",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -26,10 +27,13 @@
     "mongoose": "^4.13.17",
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "~1.9.0",
+    "moviedb": "^0.2.10",
     "nodemon": "^1.18.6",
     "passport": "^0.3.2",
-    "passport-facebook": "~2.1.1",
-    "passport-google-oauth": "~1.0.0",
+    "passport-42": "^1.2.4",
+    "passport-facebook": "^2.1.1",
+    "passport-github2": "^0.1.11",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "~1.0.4",
     "shortid": "^2.2.14"
