--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "express-validator": "^5.3.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "imdb-api": "^4.0.2",
+    "magnet-scraper": "0.0.5",
     "md5": "^2.2.1",
     "method-override": "~2.3.6",
     "mongoose": "^4.13.17",
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "~1.9.0",
     "moviedb": "^0.2.10",
+    "myts-api": "^0.2.0",
+    "node-moviedb": "^0.1.1",
     "nodemon": "^1.18.6",
+    "omdbapi": "^2.0.1",
     "passport": "^0.3.2",
     "passport-42": "^1.2.4",
     "passport-facebook": "^2.1.1",
@@ -36,7 +41,14 @@
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "~1.0.4",
-    "shortid": "^2.2.14"
+    "shortid": "^2.2.14",
+    "thepiratebay": "^1.4.7",
+    "torrent-scraper": "0.0.5",
+    "torrent-search-api": "^2.0.3",
+    "tpb-search": "0.0.1",
+    "xtorrent": "^0.2.3",
+    "yify-query": "^2.0.3",
+    "yify-search": "^1.0.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.5.0",
