--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "passport-twitter": "~1.0.4",
     "shortid": "^2.2.14",
     "thepiratebay": "^1.4.7",
+    "tmdb-3": "0.0.9",
     "torrent-scraper": "0.0.5",
     "torrent-search-api": "^2.0.3",
     "tpb-search": "0.0.1",
