--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "passport-twitter": "~1.0.4",
     "shortid": "^2.2.14",
     "torrent-stream": "^1.1.0",
+    "vid-streamer": "^1.0.0",
     "yify-query": "^2.0.3",
     "yify-search": "^1.0.0"
   },
