--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "email-existence": "^0.1.6",
     "express": "^4.16.4",
     "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
@@ -31,6 +32,7 @@
     "moviedb": "^0.2.10",
     "myts-api": "^0.2.0",
     "node-moviedb": "^0.1.1",
+    "nodemailer": "^4.7.0",
     "nodemon": "^1.18.7",
     "passport": "^0.3.2",
     "passport-42": "^1.2.4",
