--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "email-existence": "^0.1.6",
+    "email-templates": "^2.7.1",
     "express": "^4.16.4",
     "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
-    "hbs": "~4.0.1",
+    "hbs": "^4.0.1",
     "http-errors": "~1.6.2",
     "imdb-api": "^4.0.2",
     "md5": "^2.2.1",
