--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^5.3.0",
     "hbs": "^4.0.1",
     "http-errors": "~1.6.2",
+    "ignore-case": "^0.1.0",
     "imdb-api": "^4.0.2",
     "md5": "^2.2.1",
     "method-override": "~2.3.6",
