--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-social": "^5.1.1",
     "chalk": "^2.4.1",
     "cheerio": "^1.0.0-rc.2",
+    "cheerio-tableparser": "^1.0.1",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -35,7 +36,7 @@
     "myts-api": "^0.2.0",
     "node-moviedb": "^0.1.1",
     "nodemailer": "^4.7.0",
-    "nodemon": "^1.18.7",
+    "nodemon": "^1.18.8",
     "passport": "^0.3.2",
     "passport-42": "^1.2.4",
     "passport-facebook": "^2.1.1",
