--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "request-promise": "^4.2.2",
     "shortid": "^2.2.14",
     "thepiratebay": "^1.4.7",
+    "tooltip.js": "^1.3.1",
     "torrent-scraper": "0.0.5",
     "torrent-search-api": "^2.0.3",
     "torrent-stream": "^1.1.0",
